Translate and fix build

--- a/Scrabble/View/MainWindow.xaml
+++ b/Scrabble/View/MainWindow.xaml
@@ -4,22 +4,23 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Эрудит" Height="620" Width="478"
+        Title="Scrabble" Height="620" Width="478"
         Background="AntiqueWhite" 
         ResizeMode="CanMinimize"
         >
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="31*"/>
-            <ColumnDefinition Width="205*"/>
+            <ColumnDefinition Width="63*"/>
+            <ColumnDefinition Width="153*"/>
+            <ColumnDefinition Width="262*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="61*"/>
             <RowDefinition Height="57*"/>
         </Grid.RowDefinitions>
-        <Image Source="/Image/banner.png" Margin="0,10,10,133" Grid.ColumnSpan="2"/>
-        <Label Name="Label" FontSize="30" FontFamily="Georgia" HorizontalContentAlignment="Center" Content="Выберете ваш экран!" HorizontalAlignment="Left" Margin="10,233,0,0" VerticalAlignment="Top" Height="51" Width="452" Grid.ColumnSpan="2"/>
-        <Grid Name="Interfaces" Grid.Row="1" Grid.ColumnSpan="2">
+        <Image Source="/Image/banner.png" Margin="0,10,10,133" Grid.ColumnSpan="3"/>
+        <Label Name="Label" FontSize="30" FontFamily="Georgia" HorizontalContentAlignment="Center" Content="Choice your screen!" HorizontalAlignment="Left" Margin="10,233,0,0" VerticalAlignment="Top" Height="51" Width="452" Grid.ColumnSpan="3"/>
+        <Grid Name="Interfaces" Grid.ColumnSpan="3" Margin="0,312,0,0" Grid.RowSpan="2">
             <ComboBox Name="CB1" HorizontalAlignment="Left" Margin="167,16.4,0,0" Grid.Row="1" VerticalAlignment="Top" Width="121" Height="21">
                 <ComboBoxItem Name="cbi1"></ComboBoxItem>
                 <ComboBoxItem Name="cbi2">Desktop</ComboBoxItem>
@@ -42,13 +43,13 @@
             </ComboBox>
         </Grid>
 
-        <Label Content="Игрок 4" FontSize="15" FontFamily="Georgia" HorizontalAlignment="Left" Margin="19,194,0,0" Grid.Row="1" VerticalAlignment="Top" Height="28" Width="66" Grid.Column="1"/>
-        <Label Content="Игрок 3" FontSize="15" FontFamily="Georgia" HorizontalAlignment="Left" Margin="19,134,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="66" Grid.Column="1"/>
-        <Label Content="Игрок 2" FontSize="15" FontFamily="Georgia" HorizontalAlignment="Left" Margin="19,73,0,0" Grid.Row="1" VerticalAlignment="Top" Height="27" Width="65" Grid.Column="1"/>
-        <Label Content="Игрок 1" FontSize="15" FontFamily="Georgia" HorizontalAlignment="Left" Margin="19,14,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="64" Grid.Column="1"/>
-        <Label x:Name="Label_Copy" FontSize="30" FontFamily="Georgia" HorizontalContentAlignment="Center" Content="Приветсвую игроков!" HorizontalAlignment="Left" Margin="10,184,0,0" VerticalAlignment="Top" Height="51" Width="452" Grid.ColumnSpan="2"/>
-        <Button Content="Играть" Name="StartButton" FontFamily="Georgia" FontSize="27" Background="Goldenrod" HorizontalAlignment="Left" Margin="287,176,0,0" Grid.Row="1" VerticalAlignment="Top" Width="99" Height="74" Click="Button_Click" Grid.Column="1"/>
-        <Button Content="О программе" FontFamily="Georgia" FontSize="12" Background="AntiqueWhite" HorizontalAlignment="Left" Margin="287,144,0,0" Grid.Row="1" VerticalAlignment="Top" Width="99" Height="20" Click="AboutButton_Click" Grid.Column="1"/>
+        <Label Content="Player 4" FontSize="15" FontFamily="Georgia" HorizontalAlignment="Left" Margin="19,194,0,0" Grid.Row="1" VerticalAlignment="Top" Height="28" Width="66" Grid.Column="1"/>
+        <Label Content="Player 3" FontSize="15" FontFamily="Georgia" HorizontalAlignment="Left" Margin="19,134,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="66" Grid.Column="1"/>
+        <Label Content="Player 2" FontSize="15" FontFamily="Georgia" HorizontalAlignment="Left" Margin="19,73,0,0" Grid.Row="1" VerticalAlignment="Top" Height="27" Width="65" Grid.Column="1"/>
+        <Label Content="Player 1" FontSize="15" FontFamily="Georgia" HorizontalAlignment="Left" Margin="19,14,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="64" Grid.Column="1"/>
+        <Label x:Name="Label_Copy" FontSize="30" FontFamily="Georgia" HorizontalContentAlignment="Center" Content="Hello player!" HorizontalAlignment="Left" Margin="10,184,0,0" VerticalAlignment="Top" Height="51" Width="452" Grid.ColumnSpan="3"/>
+        <Button Content="Play" Name="StartButton" FontFamily="Georgia" FontSize="27" Background="Goldenrod" HorizontalAlignment="Left" Margin="134,176,0,0" Grid.Row="1" VerticalAlignment="Top" Width="99" Height="74" Click="Button_Click" Grid.Column="2"/>
+        <Button Content="About" FontFamily="Georgia" FontSize="12" Background="AntiqueWhite" HorizontalAlignment="Left" Margin="134,144,0,0" Grid.Row="1" VerticalAlignment="Top" Width="99" Height="20" Click="AboutButton_Click" Grid.Column="2"/>
 
     </Grid>
 </Window>
