--- a/Scrabble/View/DesktopWindow.xaml
+++ b/Scrabble/View/DesktopWindow.xaml
@@ -28,7 +28,7 @@
         </Grid>
         <Grid Height="191" Margin="671,498,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="593" Grid.ColumnSpan="2">
             <Grid HorizontalAlignment="Left" Margin="0,0,0,3" Width="428">
-                <Label x:Name="PlayerInfoLbl" Content="Это твои фишки." HorizontalAlignment="Left" Margin="10,18,0,0" VerticalAlignment="Top" Height="32" Width="207" FontSize="20" FontFamily="Microsoft YaHei Mono"/>
+                <Label x:Name="PlayerInfoLbl" Content="Its your chips." HorizontalAlignment="Left" Margin="10,18,0,0" VerticalAlignment="Top" Height="32" Width="207" FontSize="20" FontFamily="Microsoft YaHei Mono"/>
                 <UniformGrid x:Name="HandGrid" Columns="7" Rows="1" Margin="10,0,0,40.4" Height="70" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="408">
                     <UniformGrid.Resources>
                         <Style TargetType="{x:Type Button}">
@@ -40,12 +40,12 @@
                 <Label x:Name="StorageLbl" Content="" HorizontalAlignment="Left" Margin="298,50,0,0" VerticalAlignment="Top" Visibility="Hidden"/>
             </Grid>
             <Grid HorizontalAlignment="Right" Margin="0,0,0,3" Width="160" Name="Panel">
-                <Button x:Name="ValidateButton"  FontSize="15" Background="Green" Foreground="White" IsEnabled="True" Content="Подтвердить" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top" Width="142" Height="50" Click="ValidateButton_Click"/>
-                <Button x:Name="PassButton" FontSize="10" Background="DodgerBlue" Foreground="White" IsEnabled="True" Content="Пропустить" HorizontalAlignment="Left" Margin="90,117,0,0" VerticalAlignment="Top" Width="62" Height="50" Click="PassButton_Click"/>
-                <Button x:Name="SwapButton" FontSize="12" Background="Tomato" Foreground="White" IsEnabled="True" Content="Поменять"  HorizontalAlignment="Left" Margin="12,117,0,0" VerticalAlignment="Top" Width="60" Height="50" Click="SwapButton_Click"/>
-                <Button x:Name="ReloadButton" FontSize="15" Background="PaleVioletRed" Foreground="White" IsEnabled="True" Content="Вернуть" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top" Width="142" Height="50" Click="ReloadButton_Click"/>
+                <Button x:Name="ValidateButton"  FontSize="15" Background="Green" Foreground="White" IsEnabled="True" Content="Accept" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top" Width="142" Height="50" Click="ValidateButton_Click"/>
+                <Button x:Name="PassButton" FontSize="10" Background="DodgerBlue" Foreground="White" IsEnabled="True" Content="Skip" HorizontalAlignment="Left" Margin="90,117,0,0" VerticalAlignment="Top" Width="62" Height="50" Click="PassButton_Click"/>
+                <Button x:Name="SwapButton" FontSize="12" Background="Tomato" Foreground="White" IsEnabled="True" Content="Change"  HorizontalAlignment="Left" Margin="12,117,0,0" VerticalAlignment="Top" Width="60" Height="50" Click="SwapButton_Click"/>
+                <Button x:Name="ReloadButton" FontSize="15" Background="PaleVioletRed" Foreground="White" IsEnabled="True" Content="Back" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top" Width="142" Height="50" Click="ReloadButton_Click"/>
             </Grid>
         </Grid>
-        <Button Content="Помощь" Name="HelpButton" Background="Wheat" HorizontalAlignment="Left" Margin="272,519,0,0" VerticalAlignment="Top" Width="80" Click="HelpButton_Click" Height="23" Grid.Column="1"/>
+        <Button Content="Help" Name="HelpButton" Background="Wheat" HorizontalAlignment="Left" Margin="272,519,0,0" VerticalAlignment="Top" Width="80" Click="HelpButton_Click" Height="23" Grid.Column="1"/>
     </Grid>
 </Window>
